<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">瓦丁</string>
    <string name="search">搜索</string>
    <string name="toast_loading_error">加载失败,请稍后重试</string>
    <string name="toast_search_empty">请先输入搜索内容</string>
    <string name="chat_change_avatar">更换群头像</string>
    <string name="upgrade_version">版本</string>
    <string name="upgrade_title">更新的内容</string>
    <string name="upgrade_button_cancel">暂不</string>
    <string name="upgrade_button_upgrade">立即升级</string>
    <string name="title">标题</string>
    <string name="title_hint">请输入标题</string>
    <string name="time_line_footer">流程开始</string>
    <string name="discuss_title">标题</string>
    <string name="discuss_content">内容</string>
    <string name="discuss_content_hint">请输入内容</string>
    <string name="discuss_start">开始</string>
    <string name="discuss_end">结束</string>
    <string name="discuss_confirm">已确认</string>
    <string name="discuss_edit_button">编辑</string>
    <string name="discuss_delete">删除问题</string>
    <string name="discuss_status_close">关闭问题</string>
    <string name="discuss_status_open">开启问题</string>
    <string name="discuss_add_user_success">添加用户成功</string>
    <string name="discuss_photos_title">相关图片</string>
    <string name="friend_list_title">名片</string>
    <string name="friend_list_new_friend">新朋友</string>
    <string name="friend_apple_input_searchkey">输入关键字</string>
    <string name="friend_apple_agree">同意</string>
    <string name="friend_apple_agreed">已同意</string>
    <string name="friend_search_title">搜索好友</string>
    <string name="search_user_title">添加好友</string>
    <string name="search_user_hint">输入手机号码/姓名/企业</string>
    <string name="user_info_title">个人信息</string>
    <string name="user_info_name">姓名</string>
    <string name="user_info_enterprise">企业</string>
    <string name="user_info_department">部门</string>
    <string name="user_info_position">职位</string>
    <string name="user_info_job_number">工号</string>
    <string name="user_info_phone">电话</string>
    <string name="user_info_email">邮箱</string>
    <string name="user_info_address">地址</string>
    <string name="user_info_call_phone">电话</string>
    <string name="user_info_add_friend">加为好友</string>
    <string name="user_info_apple_agree">同意</string>
    <string name="user_info_send_message">发送消息</string>
    <string name="user_info_share">分享</string>
    <string name="user_info_post_friend_apply_success">发送好友请求成功</string>
    <string name="user_info_post_friend_apply_error">发送好友请求失败</string>
    <string name="user_info_agree_apply_success">添加好友成功</string>
    <string name="user_info_delete_success">删除好友成功</string>
    <string name="user_info_agree_apply_error">添加好友失败</string>
    <string name="currency_dollar">美元</string>
    <string name="currency_euro">欧元</string>
    <string name="currency_pound">英镑</string>
    <string name="currency_hkd">港币</string>
    <string name="currency_cad">加拿大元</string>
    <string name="currency_yen">日元</string>
    <string name="currency_ntc">新台币</string>
    <string name="currency_vnd">越南币</string>
    <string name="currency_rmb">元</string>
    <string name="currency_rmb1">人民币</string>
    <string name="filter_hint">可输入搜索内容</string>
    <string name="invoice_title">发票</string>
    <string name="invoice_filter">发票筛选</string>
    <string name="invoice_detail_title">发票详情</string>
    <string name="invoice_detail_in_out_status">进销项:</string>
    <string name="invoice_detail_amount">金额:</string>
    <string name="invoice_detail_total_tax_num">税额:</string>
    <string name="invoice_detail_total_tax_sum">价税合计:</string>
    <string name="invoice_detail_invoice_data_code">发票代码:</string>
    <string name="invoice_detail_invoice_number">发票号码:</string>
    <string name="invoice_detail_billing_time">开票日期:</string>
    <string name="invoice_detail_void_mark">是否作废:</string>
    <string name="invoice_detail_is_bill_mark">是否为清单票:</string>
    <string name="invoice_detail_check_code">校验码:</string>
    <string name="invoice_detail_tax_disk_code">机器编号:</string>
    <string name="invoice_detail_purchaser_name">购买方:</string>
    <string name="invoice_detail_taxpayer_number">纳税人识别号:</string>
    <string name="invoice_detail_taxpayer_address_or_id">地址及电话:</string>
    <string name="invoice_detail_taxpayer_bank_account">开户行及账号:</string>
    <string name="invoice_detail_sales_name">销售方:</string>
    <string name="invoice_detail_goodservice_name">货物或应税劳务名称:</string>
    <string name="invoice_detail_model">规格型号:</string>
    <string name="invoice_detail_unit">单位:</string>
    <string name="invoice_detail_numbers">数量:</string>
    <string name="invoice_detail_price">单价:</string>
    <string name="invoice_detail_sums">金额:</string>
    <string name="invoice_detail_tax_rate">税率:</string>
    <string name="invoice_detail_tax">税额:</string>
    <string name="invoice_detail_invoiceRemarks">备注:</string>
    <string name="invoice_detail_add_success">添加发票成功</string>
    <string name="invoice_detail_add_error">添加发票失败,请稍后重试</string>
    <string name="invoice_add_title">新建发票</string>
    <string name="invoice_add_in_out_status">进销项</string>
    <string name="invoice_add_type">类型</string>
    <string name="invoice_add_cost_type">业务</string>
    <string name="invoice_add_cueerncy">币种</string>
    <string name="invoice_add_invoice_number">发票号</string>
    <string name="invoice_add_invoice_number_hint">输入发票号</string>
    <string name="invoice_add_amount">金额</string>
    <string name="invoice_add_amount_hint">输入金额</string>
    <string name="invoice_add_tax_amount">税额</string>
    <string name="invoice_add_tax_amount_hint">输入税额</string>
    <string name="invoice_add_sale_name">开票方</string>
    <string name="invoice_add_sale_name_hint">选择开票方</string>
    <string name="invoice_add_pay_name">付款方</string>
    <string name="invoice_add_pay_name_hint">选择付款方</string>
    <string name="invoice_add_invoice_date">开票日期</string>
    <string name="invoice_add_invoice_date_hint">选择开票日期</string>
    <string name="invoice_add_recevie_date">收到日期</string>
    <string name="invoice_add_recevie_date_hint">选择收到日期</string>
    <string name="invoice_add_remarks">备注</string>
    <string name="invoice_add_remarks_hint">输入备注</string>
    <string name="invoice_add_invoice_number_toast">请先输入发票号</string>
    <string name="invoice_add_amount_toast">请先输入金额</string>
    <string name="invoice_add_tax_amount_toast">请先输入税额</string>
    <string name="invoice_add_sale_name_toast">请先选择开票方</string>
    <string name="invoice_add_pay_name_toast">请先选择付款方</string>
    <string name="invoice_add_invoice_date_toast">请先选择开票日期</string>
    <string name="invoice_add_recevie_date_toast">请先选择收到日期</string>
    <string name="quote_title">报价</string>
    <string name="quote_filter">报价筛选</string>
    <string name="quote_detail_to_enterprise">工艺</string>
    <string name="quote_detail_material">材料</string>
    <string name="quote_detail_cost">费用</string>
    <string name="quote_detail_price">工艺</string>
    <string name="goods_title">物品</string>
    <string name="goods_filter">物品筛选</string>
    <string name="goods_type_all_filter">全部</string>
    <string name="goods_attr_spe">属性规格</string>
    <string name="goods_quote_record">报价记录</string>
    <string name="goods_stock_record">库存记录</string>
    <string name="goods_remark">备注</string>
    <string name="goods_attr">属性</string>
    <string name="goods_spe">规格</string>
    <string name="goods_null">暂无</string>
    <string name="goods_quote_record_price">价格</string>
    <string name="goods_quote_record_person">操作人</string>
    <string name="goods_quote_record_date">日期</string>
    <string name="warehouse_title">仓库</string>
    <string name="warehouse_filter">仓库筛选</string>
    <string name="warehouse_contact">保管员</string>
    <string name="warehouse_address">地址</string>
    <string name="warehouse_goods_name">品名: </string>
    <string name="warehouse_number">数量: </string>
    <string name="warehouse_price">单价: </string>
    <string name="warehouse_receiver_name">接收人: </string>
    <string name="warehouse_receiver_address">接收地址: </string>
    <string name="warehouse_remark">备注: </string>
    <string name="order_title">订单</string>
    <string name="order_filter">订单筛选</string>
    <string name="order_theme">主题: </string>
    <string name="order_number">数量: </string>
    <string name="order_date">日期: </string>
    <string name="order_customer">客户: </string>
    <string name="employee_title">人员</string>
    <string name="employee_department">部门: </string>
    <string name="employee_position">职位: </string>
    <string name="employee_job_no">工号: </string>
    <string name="employee_apply">成员申请</string>
    <string name="employee_apply_title">成员申请</string>
    <string name="employee_apply_agree">同意</string>
    <string name="employee_apply_refuse">拒绝</string>
    <string name="employee_apply_agree_success">已同意</string>
    <string name="employee_apply_refuse_success">已拒绝</string>
    <string name="employee_apply_handle_error">操作失败,请稍后重试</string>
    <string name="requirement_title">需求</string>
    <string name="requirement_filter">需求筛选</string>
    <string name="contract_title">合同</string>
    <string name="contract_filter">合同筛选</string>
    <string name="enterprise_title">企业</string>
    <string name="enterprise_search_hint">输入企业</string>
    <string name="materials_price_title">原材料价格</string>
    <string name="materials_type">类型</string>
    <string name="materials_price">价格</string>
    <string name="materials_change">涨跌</string>
    <string name="materials_date">报价日期</string>
    <string name="rate_title">汇率</string>
    <string name="rate_currency">币种</string>
    <string name="rate_sale">现汇卖出</string>
    <string name="rate_buy">现汇买入</string>
    <string name="rate_middle">中间折算价</string>
    <string name="rate_date">日期</string>
    <string name="toast_currency_empty">请至少选择一个币种</string>
    <string name="toast_materials_empty">请至少选择一种材料</string>
    <string name="toast_materials_history_empty">暂无当天数据</string>
    <string name="toast_rate_history_empty">暂无当天数据</string>
    <string name="register_name">姓名</string>
    <string name="register_name_hint">请输入真实姓名</string>
    <string name="register_title">注册</string>
    <string name="register_phone">手机号</string>
    <string name="register_phone_hint">输入手机号</string>
    <string name="register_password">密码</string>
    <string name="register_password_hint">输入密码</string>
    <string name="register_verify_code">验证码</string>
    <string name="register_verify_code_hint">输入验证码</string>
    <string name="register_get_verify_code">获取验证码</string>
    <string name="register_name_empty">请先输入真实姓名</string>
    <string name="register_phone_empty">请先输入电话号码</string>
    <string name="register_password_empty">请先输入密码</string>
    <string name="register_verify_code_empty">请先输入验证码</string>
    <string name="register_enterprise_empty">请先选择企业</string>
    <string name="user_apply_success">申请成功,等待管理员处理</string>
    <string name="user_apply_fail">申请失败,请稍后重试</string>
    <string name="register_company">公司名称</string>
    <string name="register_company_search">搜索公司名称</string>
    <string name="register_company_title">搜索公司</string>
    <string name="register_company_search_hint">搜索公司名称</string>
    <string name="check_title">盘点</string>
    <string name="check_filter_title">盘点筛选</string>
    <string name="check_detail_title">盘点详情</string>
    <string name="check_detail_remark_hint">输入备注</string>
    <string name="check_question_title">问题库</string>
    <string name="check_question_add_title">添加问题</string>
    <string name="check_question_add_hint">输入问题</string>
    <string name="check_question_add_commit">提交</string>
    <string name="share">分享给好友</string>
    <string name="share_session">微信好友</string>
    <string name="share_timeline">微信朋友圈</string>
    <string name="share_copyurl">复制链接</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_phone_hint">请输入手机号</string>
</resources>