<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:elevation="4dp"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_back"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/rate_title"
            android:textColor="@color/colorStyle"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

<!--        <com.wd.winddots.view.selector.SelectView-->
<!--            android:id="@+id/view_selector"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginRight="15dp"-->
<!--            />-->

        <ImageView
            android:id="@+id/iv_calendar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="70dp"
            android:src="@mipmap/calendar"
            />

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/setting"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#EFEFF4"
        >
        <TextView
            android:id="@+id/tv_content1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:layout_marginRight="3dp"
            android:textSize="13sp"
            android:text="@string/rate_currency"/>
        <TextView
            android:id="@+id/tv_content2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingVertical="8dp"
            android:gravity="center"
            android:layout_marginRight="3dp"
            android:textSize="13sp"
            android:text="@string/rate_buy"
            />
        <TextView
            android:id="@+id/tv_content3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingVertical="8dp"
            android:gravity="center"
            android:layout_marginRight="3dp"
            android:textSize="13sp"
            android:text="@string/rate_sale"
            />
        <TextView
            android:id="@+id/tv_content4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingVertical="8dp"
            android:gravity="center"
            android:layout_marginRight="3dp"
            android:textSize="13sp"
            android:text="@string/rate_middle"
            />

        <TextView
            android:id="@+id/tv_content5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingVertical="8dp"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/rate_date"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rlist"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
