<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:background="@color/alpha_45_black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_centerInParent="true"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">
        <TextView
            android:id="@+id/pop_sign_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/check_question_add_title"
            android:textStyle="bold"
            android:gravity="center" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/alpha_05_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="15dp">
            <EditText
                android:id="@+id/et_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/check_question_add_hint"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/alpha_05_black" />
        <TextView
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/check_question_add_commit"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_savebtn_corner"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>
