<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:orientation="vertical">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/share"
        android:gravity="center"
        android:background="@color/colorWhite"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorF0" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        >

        <LinearLayout
            android:id="@+id/ll_sharetosession"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="115dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/sharetosession"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_session"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sharetotimeline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="115dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/sharetotimeline"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_timeline"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_copyurl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="115dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/copyurl"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_copyurl"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>


    </LinearLayout>

    
    
    
</LinearLayout>
