<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:orientation="vertical"
    android:paddingHorizontal="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_upgrade_corner"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/upgrade" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/upgrade_title"
            android:textStyle="bold" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/view_upgrade_rlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/alpha_05_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/alpha_05_black"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_button_cancel"
                android:background="@color/colorWhite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/upgrade_button_cancel"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_button_upgrade"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/upgrade_button_upgrade"
                android:gravity="center"
                android:background="@color/colorWhite"
                android:layout_marginLeft="1dp"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
