<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorF0"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:elevation="4dp"
        app:elevation="5dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_back"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/register_title"
            android:textColor="@color/colorStyle"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.wd.winddots.view.EditCell
        android:id="@+id/ec_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.wd.winddots.view.EditCell
        android:id="@+id/ec_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp" />

    <com.wd.winddots.view.EditCell
        android:id="@+id/ec_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_verify_code"
            android:textColor="@color/color32"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_verify_code_hint"
            android:inputType="numberDecimal"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_select_border">

            <TextView
                android:id="@+id/tv_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register_get_verify_code" />

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="17dp"
                android:indeterminateTint="@color/colorBlack"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <com.wd.winddots.view.TitleTextView
        android:id="@+id/ttv_enterprise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:view_content="搜索公司"
        app:view_title="公司名称" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/ll_user_apply"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#33B3EA">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="加入该公司"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>
