<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingHorizontal="25dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:src="@mipmap/ic_app" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorLoginEdtBg">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@mipmap/ic_login_user" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_phone"
                android:background="@color/colorTransparent"
                android:hint="@string/login_phone_hint"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="18dp"
            android:background="@color/colorLoginEdtBg">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@mipmap/ic_login_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_password"
                android:background="@color/colorTransparent"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/select_login_btn_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/btn_text_size" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/select_login_btn_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

</RelativeLayout>